--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,10 @@
     <string name="get_started">GET STARTED</string>
     <string name="app_description_welcome">Restrict your phone usage\nGet Reminders\nTrack your Progress\nand\nSave your valuable time</string>
     <string name="tandc">I accept all the <a href="http://google.com">Terms and Conditions</a></string>
+    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="action_settings">Settings</string>
 </resources>
