Minify Beta 1.4 [fixed persistence of settings and pause switch]

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,8 @@
     <string name="d_phone">D-Phone</string>
     <string name="get_started">GET STARTED</string>
     <string name="app_description_welcome">Restrict your phone usage\nGet Reminders\nTrack your Progress\nand\nSave your valuable time</string>
-    <string name="tandc">I accept all the <a href="http://google.com">Terms and Conditions</a></string>
+    <string name="tandc">I accept all the </string>
+    <string name="tnc"><a href="http://google.com">Terms and Conditions</a></string>
     <string name="title_activity_nav_drawer">NavDrawerActivity</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
