fix android version bump and made app workable, minor bugs yet to fix

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">de phone</string>
+    <string name="app_name">Minify</string>
     <string name="d_phone">D-Phone</string>
     <string name="get_started">GET STARTED</string>
     <string name="app_description_welcome">Restrict your phone usage\nGet Reminders\nTrack your Progress\nand\nSave your valuable time</string>
@@ -11,4 +11,5 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="title_activity_notification_drawer">NotificationDrawerActivity</string>
 </resources>
